Update Apple Pay merchant identifier for testing

--- a/pay.html
+++ b/pay.html
@@ -50,7 +50,7 @@
                     supportedMethods: "https://apple.com/apple-pay",
                     data: {
                         version: 3,
-                        merchantIdentifier: "merchant.com.example.test", // 测试用
+                        merchantIdentifier: "merchant.com.apple.test", // 测试用
                         merchantCapabilities: ["supports3DS"],
                         supportedNetworks: ["visa", "mastercard", "amex"],
                         countryCode: "US"
