Comment out page reload on successful punch-in
Commented out the window location reload after successful punch-in.

--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
 
                 // 語音提示
                 await speakMessage(`打卡成功，恭喜${currentEmployee.name}`);
-                window.location.reload();
+                //window.location.reload();
 
             } else {
                 resultDiv.innerHTML = `
